--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -23,7 +23,7 @@
           <ul class="navigation-list">
             <li><a href="/news"><span class="fa fa-bell-o"></span> News</a></li>
             <li><a href="/admission"><span class="fa fa-university"></span> Enrollment</a></li>
-            <li><a href="/login"><span class="fa fa-key"></span> Login</a></li>
+            <li><a href="/signin"><span class="fa fa-key"></span> Login</a></li>
             <li><a href="/signup"><span class="fa fa-plus"></span> Sign Up</a></li>
         </div>
       </div>
